# MRMI_Gateway

./: .dockerignore  .gitignore  CLAUDE.md  CODE_STANDARDS.md  CONTRIBUTING.md  Dockerfile  LICENSE  MRMI_Gateway_ADR_v0.5.md  Makefile  README.md  go.mod  go.sum  tools.go
cmd/mrmi/: main.go  mrmi_test.go
cmd/mrmi-gateway/: main.go
configs/: node.alliance.eaeu.toml  node.balanced.toml  node.global.relay.toml  node.rs.demo.toml  node.rs.local.toml  node.ru.demo.toml  node.ru.local.toml
demo/blazor/: .gitignore
docs/: ALLIANCE_NODE_GUIDE.md  CONTRIBUTING.md  LOCAL_TWO_NODE_GUIDE.md  MRMI_Gateway_ADR_v0_8.md  SEED_NODE_GUIDE.md  SPRINT_1_PLAN.md  SPRINT_2_PLAN.md  SPRINT_3_PLAN.md  SPRINT_4_PLAN.md  SPRINT_5_PLAN.md  SPRINT_6_PLAN.md
internal/app/: app.go
internal/audit/: log.go  log_test.go  verify_file_test.go
internal/config/: config.go  config_test.go  presets.go
internal/connect/: resolver.go  resolver_test.go
internal/core/: gateway.go  gateway_test.go
internal/crl/: store.go  store_test.go
internal/dedup/: index.go  index_test.go
internal/delivery/: dlq.go  dlq_test.go  forwarder.go  forwarder_test.go  retry.go  retry_test.go
internal/discovery/: broadcaster.go  broadcaster_test.go
internal/dnstxt/: publisher.go  publisher_test.go
internal/dummy/: generator.go  generator_test.go
internal/hotreload/: watcher.go  watcher_test.go
scripts/: demo-start.ps1  demo-start.sh
sdk/python/: pyproject.toml
sdk/python/mrmi_gateway/: __init__.py  client.py  models.py
sdk/python/tests/: test_client.py
web/: app.js  index.html  web.go
(+88 files in other folders)
