[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "mrmi-gateway-sdk"
version = "0.2.0"
description = "Official Python SDK for the MRMI Gateway — multi-regional messaging corridor client."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Božidar Tadić" }]
requires-python = ">=3.11"
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "respx>=0.21"]

[tool.setuptools.packages.find]
where = ["."]
include = ["mrmi_gateway*"]
